# waypoint

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
src/: main.rs  utils.rs
src/cmd/: back.rs  base.rs  cli.rs  init.rs  list.rs  mod.rs
~/.waypoint/: info.json
